Atualizar o projeto para tirar os metodos depreced